src/client/styles/chatNotifications.scss
/* ... */
.active-chat-main-container-mobile{
  display: none;
  &:first-child{
    display: flex;
  }
}
.active-chat-container-mobile{
  position: absolute;
  top: 60px;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  z-index: 99;
  width: 100%;
  height: auto;
  margin-top: -20px;
  margin-bottom: 20px;
  @media all and (min-width: 768px){
    display: none;
  }
  .active-main-chat-container{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    height: 50px;
    background-image: linear-gradient(-134deg, #FFFFFF 0%, #F8FFFE 63%, #F7FCFF 100%);
    border-bottom: 2px solid rgb(249, 249, 249);
    width: 100%;
    .active-chat-icon-close{
      margin-left: 16px;
      width: 12px;
      height: 12.3px;
      display: flex;
      img{
        vertical-align: inherit;
      }
    }
    .active-chat-user-name{
      margin-left: 15px;
    }
    .active-chat-has-mesagges-icon{
      margin-left: 10px;
    }
  }
  .active-chat-conversation-window{
    width: 100%;
    position: relative;
    .active-chat-in-use{
      height: auto;
      min-height: 35vh;
      max-height: 60vh;
    }
    .conversation-textarea-container{
      height: 20px;
      overflow: visible;
      border: 1px solid #F4F4F4;
      padding: 10px 10px 35px 10px;
      background-color: #fff;
      position: relative;
      textarea{
        font-size: 14px;
        &:focus{
          height: 20px;
        }
      }
    }
  }
}

.active-chat-container{
  display: none;
  @media all and (min-width: 768px){
    position: relative;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    z-index: 99;
    width: 250px;
    margin-right: 10px;
    box-shadow: rgba(16, 16, 16, 0.5) 0 13px 30px 0px;
    .active-chat-small{
      height: 40px;
      transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
      .active-main-chat-container{
        display: flex;
        justify-content: flex-start;
        align-items: center;
        height: 40px;
        background-image: linear-gradient(-134deg, #FFFFFF 0%, #F8FFFE 63%, #F7FCFF 100%);
        border-bottom: 2px solid rgb(249, 249, 249);
        width: 175px;
        @media all and (min-width: 1200px) {
          width: 250px;
        }
        &:hover{
          cursor: pointer;
        }
        .active-chat-has-mesagges-icon{
          margin-left: 16px;
          width: 16px;
          height: 16.3px;
          display: flex;
          img{
            vertical-align: inherit;
          }
        }
        .active-chat-icon-close{
          margin-left: 16px;
          width: 9px;
          height: 9.3px;
          display: flex;
          img{
            vertical-align: inherit;
          }
        }
        .active-chat-user-name{
          font-size: 13px;
          color: #000;
          letter-spacing: 0.41px;
          margin-left: 10px;
        }
      }
    }
    .chat-open{
      height: 100%;
      width: 250px;
      transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
      box-shadow: rgba(222, 222, 222, 0.498039) 0px 4px 20px 0px;
      background-image: linear-gradient(-134deg, #FFFFFF 0%, #F8FFFE 63%, #F7FCFF 99%);
      .active-chat-conversation-window{
        width: 100%;
      }
    }
  }
}

.active-chat-in-use{
  height: 240px;
  overflow-x: hidden;
  overflow-y: scroll;
  background: $white;
  @media all and (min-width: 768px){
    height: 300px;
  }
  .conversation-extrange{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: row;
    padding: 10px;
    width: 100%;
    flex-wrap: wrap;
    .conversation-extrange-figure{
      width: 30px;
      align-self: flex-start;
      img{
        border-radius: 23px;
      }
    }
    .conversation-extrange-chat-container{
      width: 80%;
      margin-left: 10px;
      .conversation-extrange-pharagraph{
        background: #F5F5F5;
        margin-bottom: 10px;
        padding: 3.75px 10px;
        word-wrap: break-word;
        font-size: 12px;
        text-align: left;
        border-radius: 7.5px;
      }
    }
    .timestamp-container{
      width: 100%;
      align-self: flex-start;
      margin-left: 45px;
      text-align: left;
      span{
        font-size: 11px;
        color: #9B9B9B;
      }
    }
  }
  .conversation-me{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 10px;
    width: 100%;
    .conversation-me-chat-container{
      width: 84%;
      margin-left: 10px;
      .conversation-me-pharagraph{
        background: #0092FF;
        border-radius: 7.5px;
        margin-bottom: 10px;
        padding: 3.75px 10px;
        color: $white;
        word-wrap: break-word;
        text-align: right;
        font-size: 12px;
      }
    }
    .timestamp-container{
      width: 100%;
      display: flex;
      justify-content: flex-end;
      margin-left: 45px;
      text-align: right;
      span{
        font-size: 11px;
        color: #9B9B9B;
      }
    }
  }
}
.conversation-textarea-container{
  height: 50px;
  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
  border-top: 1px solid #F4F4F4;
  border-bottom: 1px solid #F4F4F4;
  padding: 10px;
  background-color: $white;
  overflow: hidden;
  @media all and (min-width: 768px){
    border-bottom: none;
    height: 40px;
  }
  textarea{
    border: none;
    height: 100%;
    resize: none;
    padding: 0;
    margin-bottom: 0;
    box-shadow: none;
    font-size: 12px;
    &:focus{
      border: none;
      box-shadow: none;
    }
  }
}
/* ... */

